<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/textRpm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textSpeedVert"
        android:layout_alignBottom="@+id/textSpeedVert"
        android:layout_alignRight="@+id/throttle"
        android:layout_marginRight="104dp"
        android:hint="@string/rpm"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textSpeedVert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/speedText"
        android:layout_below="@+id/speedText"
        android:layout_marginTop="20dp"
        android:hint="@string/vertical_speed"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/port"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ipadr"
        android:layout_alignBottom="@+id/ipadr"
        android:layout_alignRight="@+id/throttle"
        android:layout_toRightOf="@+id/ipadr"
        android:ems="10"
        android:hint="@string/port"
        android:inputType="text" />

    <TextView
        android:id="@+id/textAlt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/speedText"
        android:layout_alignBottom="@+id/speedText"
        android:layout_alignLeft="@+id/textRpm"
        android:hint="@string/altitude"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/speedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ipadr"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="16dp"
        android:hint="@string/speed"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/throttle"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/yawSwitch"
        android:layout_below="@+id/send"
        android:layout_marginTop="16dp"
        android:layout_toRightOf="@+id/send" />

    <Switch
        android:id="@+id/yawSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/reset"
        android:layout_alignBottom="@+id/reset"
        android:layout_alignParentRight="true"
        android:layout_marginRight="72dp"
        android:text="@string/yaw" />

    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/yawSwitch"
        android:layout_alignRight="@+id/speedText"
        android:text="@string/send" />

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/throttle"
        android:layout_marginLeft="22dp"
        android:text="@string/reset" />

    <EditText
        android:id="@+id/ipadr"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/send"
        android:layout_below="@+id/throttle"
        android:layout_marginTop="14dp"
        android:layout_toLeftOf="@+id/textAlt"
        android:ems="10"
        android:hint="@string/ip_address"
        android:inputType="text" >

        <requestFocus />
    </EditText>

</RelativeLayout>